--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,9 @@
 @import url(../vendor/normalize.css);
 
-@import url(../blocks/elements/_hidden/elements_hidden.css);
+.footer__show-more-button_hidden {
+    display: none;
+}
 
-@import url(../blocks/footer/__show-more-button/_hidden/footer__show-more-button_hidden.css);
+.elements_hidden {
+    display: none;
+}
